feat(index.html): prepare the front

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,33 @@
     <title>Socket.io Chatbot</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h1>ChatBot <small>x</small> Socket.io</h1>
+      <div class="container">
+        <div class="logIn">
+
+        </div>
+        <div class="chat hide">
+          <div class="chanList">
+
+          </div>
+          <div class="userList">
+
+          </div>
+          <div class="messageContainer" id="messageContainer">
+            <div class="message">
+
+            </div>
+            <div class="writingNotification">
+
+            </div>
+            <div class="messageInput" id="messageInput">
+              <input type="text" id="userInput" autofocus />
+              <button type="button">Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
