--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Project</title>
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Socket.io Chatbot</title>
@@ -10,10 +9,10 @@
     <div id="app">
       <h1>ChatBot <small>x</small> Socket.io</h1>
       <div class="container">
-        <div class="logIn hide">
+        <div class="logIn show" id="logIn">
 
         </div>
-        <div class="chat show">
+        <div class="chat hide" id="chat">
           <div class="chanList">
             <ul>
               <li>Channel 1</li>
@@ -30,6 +29,12 @@
             </div>
             <div class="messageContainer" id="messageContainer">
               <div class="messages">
+                <div class="joinMessage" id="joinMessage">
+                  <div class="messageBody">
+                    <p>Haneul has joined the channel</p>
+                  </div>
+                  <small>12/19/21 - 2:00PM</small>
+                </div>
                 <div class="message" id="you">
                   <h4>You</h4>
                   <div class="messageBody">
@@ -37,17 +42,31 @@
                   </div>
                   <small>12/19/21 - 2:00PM</small>
                 </div>
-                <div class="message">
+                <div class="message" id="other">
                   <h4>Maengdok</h4>
                   <div class="messageBody">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit cum ipsum atque nam ullam fuga. Vel porro provident libero hic.</p>
                   </div>
                   <small>12/19/21 - 2:03PM</small>
                 </div>
+                <div class="message" id="other">
+                  <h4>Haneul</h4>
+                  <div class="messageBody">
+                    <p>Lorem, ipsum dolor </p>
+                  </div>
+                  <small>12/19/21 - 2:05PM</small>
+                </div>
+                <div class="message" id="you">
+                  <h4>You</h4>
+                  <div class="messageBody">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit cum ipsum atque nam ullam fuga. Vel porro provident libero hic.</p>
+                  </div>
+                  <small>12/19/21 - 2:00PM</small>
+                </div>
               </div>
               <div class="writingNotification">
-                <p class="singlePerson show">Haneul is typing...</p>
-                <p class="manyPersone hide">Haneul and 2 more persons are typing...</p>
+                <p class="singlePerson hide">Haneul is typing...</p>
+                <p class="manyPersons show">Haneul and 2 more persons are typing...</p>
               </div>
               <div class="messageInput" id="messageInput">
                 <input type="text" id="userInput" autofocus />
