feat(Chat): show when user connects

--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,7 @@
               </ul>
             </div>
             <div class="messageContainer" id="messageContainer">
-              <div class="messages">
-                <div class="joinMessage" id="joinMessage">
-                  <div class="messageBody">
-                    <p>Haneul has joined the channel</p>
-                  </div>
-                  <small>12/19/21 - 2:00PM</small>
-                </div>
+              <div class="messages" id="messages">
                 <div class="message" id="you">
                   <h4>You</h4>
                   <div class="messageBody">
