feat(Chat): add user to the contact list

--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,11 @@
             </ul>
           </div>
           <div class="userListMessageContainer">
-            <div class="userList">
+            <div class="userList" id="userList">
               <ul>
-                <li>Maengdok</li>
-                <li>Haneul</li>
-                <li>Sinhwa</li>
+                <li class="bot">Maengdok</li>
+                <li class="bot">Haneul</li>
+                <li class="bot">Sinhwa</li>
               </ul>
             </div>
             <div class="messageContainer" id="messageContainer">
