--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -29,41 +29,15 @@
             </div>
             <div class="messageContainer" id="messageContainer">
               <div class="messages" id="messages">
-                <div class="message" id="you">
-                  <h4>You</h4>
-                  <div class="messageBody">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                  </div>
-                  <small>12/19/21 - 2:00PM</small>
-                </div>
-                <div class="message" id="other">
-                  <h4>Maengdok</h4>
-                  <div class="messageBody">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit cum ipsum atque nam ullam fuga. Vel porro provident libero hic.</p>
-                  </div>
-                  <small>12/19/21 - 2:03PM</small>
-                </div>
-                <div class="message" id="other">
-                  <h4>Haneul</h4>
-                  <div class="messageBody">
-                    <p>Lorem, ipsum dolor </p>
-                  </div>
-                  <small>12/19/21 - 2:05PM</small>
-                </div>
-                <div class="message" id="you">
-                  <h4>You</h4>
-                  <div class="messageBody">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit cum ipsum atque nam ullam fuga. Vel porro provident libero hic.</p>
-                  </div>
-                  <small>12/19/21 - 2:00PM</small>
-                </div>
-              </div>
+                <!-- TODO -->
               <div class="writingNotification">
                 <p class="singlePerson hide">Haneul is typing...</p>
                 <p class="manyPersons show">Haneul and 2 more persons are typing...</p>
               </div>
+                <!-- !TODO -->
               <div class="messageInput" id="messageInput">
-                <input type="text" id="userInput" autofocus />
+                <label for="userInput"></label>
+                <input type="text" id="userInput" autofocus>
                 <button type="button">
                   <p>></p>
                 </button>
