feat(userIsWriting): shows when user is writing

--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,9 @@
             <div class="messageContainer" id="messageContainer">
               <div class="messages" id="messages">
               </div>
-                <!-- TODO -->
               <div class="messageInputWritingNotification">
-                <div class="writingNotification">
-                  <p class="singlePerson hide">Haneul is typing...</p>
-                  <p class="manyPersons show">Haneul and 2 more persons are typing...</p>
+                <div class="writingNotification" id="writingNotification">
                 </div>
-                <!-- !TODO -->
                 <div class="messageInput" id="messageInput">
                   <label for="userInput"></label>
                   <input type="text" id="userInput" autofocus>
