--- a/src/index.html
+++ b/src/index.html
@@ -3,21 +3,16 @@
   <head>
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Socket.io Chatbot</title>
+    <title>Socket.io x Chatbot</title>
   </head>
   <body>
     <div id="app">
-      <h1>ChatBot <small>x</small> Socket.io</h1>
       <div class="container">
         <div class="logIn show" id="logIn">
-
         </div>
         <div class="chat hide" id="chat">
           <div class="chanList">
-            <ul>
-              <li>Channel 1</li>
-              <li>Channel 2</li>
-            </ul>
+            <h1>ChatBot <small>x</small> Socket.io</h1>
           </div>
           <div class="userListMessageContainer">
             <div class="userList" id="userList">
@@ -29,7 +24,7 @@
               </ul>
             </div>
             <div class="messageContainer" id="messageContainer">
-              <div class="messages" id="messages">
+              <div class="messages hide" id="messages">
               </div>
               <div class="messageInputWritingNotification">
                 <div class="writingNotification" id="writingNotification">
