--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>My Project</title>
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Socket.io Chatbot</title>
+    <title>Socket.io x Chatbot</title>
   </head>
   <body>
     <div id="app">
-      <h1>ChatBot <small>x</small> Socket.io</h1>
       <div class="container">
-        <div class="logIn">
-
+        <div class="logIn show" id="logIn">
         </div>
-        <div class="chat hide">
+        <div class="chat hide" id="chat">
           <div class="chanList">
-
+            <h1>ChatBot <small>x</small> Socket.io</h1>
           </div>
-          <div class="userList">
-
-          </div>
-          <div class="messageContainer" id="messageContainer">
-            <div class="message">
-
+          <div class="userListMessageContainer">
+            <div class="userList" id="userList">
+              <h4 class="userListTitle">Bots</h4>
+              <ul id="userListBots">
+              </ul>
+              <h4 class="userListTitle">Users</h4>
+              <ul id="userListUsers">
+              </ul>
             </div>
-            <div class="writingNotification">
-
-            </div>
-            <div class="messageInput" id="messageInput">
-              <input type="text" id="userInput" autofocus />
-              <button type="button">Send</button>
+            <div class="messageContainer" id="messageContainer">
+              <div class="messages hide" id="messages">
+              </div>
+              <div class="messageInputWritingNotification">
+                <div class="writingNotification" id="writingNotification">
+                </div>
+                <div class="messageInput" id="messageInput">
+                  <label for="userInput"></label>
+                  <input type="text" id="userInput" autofocus>
+                  <button type="button">
+                    <p>></p>
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
